@@ -1,3 +1,6 @@
+2007-06-10 In matplotlibrc file, use 'dashed' | 'solid' instead
+           of a pair of floats for contour.negative_linestyle - EF
+
 2007-06-08 Allow plot and fill fmt string to be any mpl string
             colorspec - EF
 
